# awesome-agentic-usecases

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  VERIFICATION.md
customer-support/refund-crew/: FAILURE_MODES.md  README.md  pyproject.toml
customer-support/refund-crew/results/: eval_Qwen_Qwen3.7-Plus.json  eval_Qwen_Qwen3.7-Plus.md  eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md
customer-support/refund-crew/tests/: test_refund_crew.py
customer-support/refund-guarded/: FAILURE_MODES.md  README.md  pyproject.toml
customer-support/refund-guarded/results/: eval_commit_accounts_fireworks_models_gpt-oss-120b.json  eval_commit_accounts_fireworks_models_gpt-oss-120b.md  eval_enforced_mistral-small-latest.json  eval_enforced_mistral-small-latest.md
customer-support/refund-guarded/tests/: test_guarded.py
customer-support/refund-injected/: FAILURE_MODES.md  README.md  pyproject.toml
customer-support/refund-injected/results/: eval_none_mistral-small-latest.json  eval_none_mistral-small-latest.md  eval_prompt_guard_accounts_fireworks_models_gpt-oss-120b.json  eval_prompt_guard_accounts_fireworks_models_gpt-oss-120b.md  eval_prompt_guard_mistral-small-latest.json  eval_prompt_guard_mistral-small-latest.md  eval_tool_guard_mistral-small-latest.json  eval_tool_guard_mistral-small-latest.md
customer-support/refund-injected/tests/: test_injection.py
customer-support/refund-resolution-agent/: FAILURE_MODES.md  README.md  pyproject.toml
customer-support/refund-resolution-agent/evals/: scenarios.jsonl
customer-support/refund-resolution-agent/results/: eval_Qwen_Qwen3.7-Plus.json  eval_Qwen_Qwen3.7-Plus.md  eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
customer-support/refund-resolution-agent/tests/: test_refund_resolution.py
financial-services-fraud/fraud-alert-triage-agent/: FAILURE_MODES.md  README.md  pyproject.toml
financial-services-fraud/fraud-alert-triage-agent/evals/: scenarios.jsonl
financial-services-fraud/fraud-alert-triage-agent/results/: eval_Qwen_Qwen3.7-Plus.json  eval_Qwen_Qwen3.7-Plus.md  eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_accounts_fireworks_models_kimi-k2p6.json  eval_accounts_fireworks_models_kimi-k2p6.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
financial-services-fraud/fraud-alert-triage-agent/tests/: test_fraud_triage.py
harness/: README.md  pyproject.toml
harness/src/aau_harness/: __init__.py  agent_loop.py  cost.py  delegation.py  llm_providers.py  report.py  runner.py
harness/tests/: test_delegation.py  test_harness.py  test_streaming.py
it-operations/oncall-watch-agent/: FAILURE_MODES.md  README.md  pyproject.toml
it-operations/oncall-watch-agent/evals/: scenarios.jsonl
it-operations/oncall-watch-agent/results/: eval_Qwen_Qwen3.7-Plus.json  eval_Qwen_Qwen3.7-Plus.md  eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
it-operations/oncall-watch-agent/tests/: test_oncall_watch.py
logistics-supply-chain/exception-triage-agent/: FAILURE_MODES.md  README.md  pyproject.toml
logistics-supply-chain/exception-triage-agent/evals/: scenarios.jsonl
logistics-supply-chain/exception-triage-agent/results/: eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_accounts_fireworks_models_kimi-k2p6.json  eval_accounts_fireworks_models_kimi-k2p6.md  eval_meta-llama_Llama-3.3-70B-Instruct-Turbo.json  eval_meta-llama_Llama-3.3-70B-Instruct-Turbo.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
logistics-supply-chain/exception-triage-agent/tests/: test_exception_triage.py  test_openai_compat.py  test_pipeline.py
media-streaming/release-qc-triage-agent/: DESIGN.md  FAILURE_MODES.md  README.md  pyproject.toml
media-streaming/release-qc-triage-agent/evals/: scenarios.jsonl
media-streaming/release-qc-triage-agent/results/: eval_Qwen_Qwen3.7-Plus.json  eval_Qwen_Qwen3.7-Plus.md  eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_accounts_fireworks_models_kimi-k2p6.json  eval_accounts_fireworks_models_kimi-k2p6.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
media-streaming/release-qc-triage-agent/tests/: test_release_qc.py
retail-workforce/shift-coverage-triage-agent/: FAILURE_MODES.md  README.md  pyproject.toml
retail-workforce/shift-coverage-triage-agent/evals/: scenarios.jsonl
retail-workforce/shift-coverage-triage-agent/results/: eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_accounts_fireworks_models_kimi-k2p6.json  eval_accounts_fireworks_models_kimi-k2p6.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
retail-workforce/shift-coverage-triage-agent/tests/: test_shift_coverage.py
security-operations/alert-triage-agent/: FAILURE_MODES.md  README.md  pyproject.toml
security-operations/alert-triage-agent/evals/: scenarios.jsonl
security-operations/alert-triage-agent/results/: eval_accounts_fireworks_models_gpt-oss-120b.json  eval_accounts_fireworks_models_gpt-oss-120b.md  eval_accounts_fireworks_models_kimi-k2p6.json  eval_accounts_fireworks_models_kimi-k2p6.md  eval_mistral-small-latest.json  eval_mistral-small-latest.md  eval_mock.json  eval_mock.md
security-operations/alert-triage-agent/tests/: test_alert_triage.py
security-operations/artifact-admission-agent/: DESIGN.md  FAILURE_MODES.md  README.md  pyproject.toml
security-operations/trifecta-exfil-agent/: DESIGN.md  FAILURE_MODES.md  README.md  pyproject.toml
(+110 files in other folders)
