[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aau-harness"
version = "0.1.0"
description = "Shared eval harness for awesome-agentic-usecases: cost tracking from token usage, repeated-run evaluation with bootstrap CIs, and markdown reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["agents", "evaluation", "llm", "cost-tracking"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
