[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refund-crew"
version = "0.1.0"
description = "A three-agent crew (orchestrator, investigator, compliance officer) solving the same refund task as the single-agent version, on identical scenarios, so the effect of multi-agent orchestration can be measured rather than assumed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["multi-agent", "orchestration", "customer-support", "agents", "llm", "agent-safety", "evaluation"]
dependencies = ["aau-harness", "refund-resolution-agent"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
refund-crew = "refund_crew.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
