[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refund-guarded"
version = "0.1.0"
description = "Tests this repo's own recommendation. Two interventions on the refund task, each a single change against a committed baseline: prohibitions enforced in the tool layer, and a forced-commit scaffold. Measures what the guardrail costs, not just that it fires."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["agent-safety", "guardrails", "ablation", "agents", "llm", "evaluation"]
dependencies = ["aau-harness", "refund-resolution-agent"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
refund-guarded = "refund_guarded.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
