[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refund-injected"
version = "0.1.0"
description = "Prompt injection through customer-supplied ticket text, scored by consequence: did the injection cause a real irreversible action the policy forbade. Compares an undefended agent, a prompt-based defence, and a tool-layer policy engine on identical injected scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["prompt-injection", "agent-security", "ai-security", "guardrails", "agents", "llm", "evaluation"]
dependencies = ["aau-harness", "refund-resolution-agent", "refund-guarded"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
refund-injected = "refund_injected.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
