[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refund-resolution-agent"
version = "0.1.0"
description = "Tool-using customer-support agent that resolves refund tickets by executing irreversible actions in a required order: verifies identity, checks entitlement and chargeback status, then refunds, replaces, escalates, or denies. Scored on action safety, not just the label."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["customer-support", "refunds", "agents", "llm", "tool-use", "agent-safety", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
refund-resolution-agent = "refund_resolution_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
