[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-alert-triage-agent"
version = "0.1.0"
description = "Tool-using bank-fraud agent that triages transaction alerts: pulls the customer record and transaction signals, checks fraud policy (escalation thresholds, auto-release exceptions, APP-scam guidance), and commits a queue + disposition. Ships with a verified eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["fintech", "fraud", "aml", "transaction-monitoring", "agents", "llm", "tool-use", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
fraud-alert-triage-agent = "fraud_alert_triage_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
