[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oncall-watch-agent"
version = "0.1.0"
description = "Tool-using on-call agent that watches service telemetry one minute at a time and decides whether a window warrants a page, a ticket, or silence. Scored on alert fatigue and patience as well as correctness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["sre", "devops", "monitoring", "on-call", "alerting", "agents", "llm", "tool-use", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
oncall-watch-agent = "oncall_watch_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
