[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exception-triage-agent"
version = "0.1.0"
description = "Tool-using agent that triages stuck-shipment exception tickets: investigates each ticket via shipment lookup, carrier status, and policy search, then routes it to the right resolution queue with an auto-resolve/route/escalate decision. Ships with a verified eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["logistics", "agents", "llm", "triage", "tool-use", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
exception-triage-agent = "exception_triage_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
