[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "release-qc-triage-agent"
version = "0.1.0"
description = "Tool-using streaming-operations agent that triages QC flags on delivered assets before release: pulls release context and production annotations, checks release policy (accessibility hard block, release window, in-house repair capability), and commits an owning queue plus a release action. Ships with a verified eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["streaming", "media", "video", "quality-control", "accessibility", "agents", "llm", "tool-use", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
release-qc-agent = "release_qc_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
