[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-coverage-triage-agent"
version = "0.1.0"
description = "Tool-using agent that triages short-staffed retail shifts: pulls the shift record and candidate roster, checks labor policy (overtime caps, minor work-hour limits, borrowing rules), and commits a compliant fill strategy. Ships with a verified eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Imran Ahamed" }]
keywords = ["retail", "workforce", "scheduling", "agents", "llm", "tool-use", "evaluation"]
dependencies = ["aau-harness"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.90"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
shift-coverage-agent = "shift_coverage_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
